refactor: [LUT-426] 랭킹 칭호·레벨 조회 배치화
랭킹 목록이 행마다 칭호·레벨을 단건 조회하던 N+1 제거.
페이지 크기와 무관하게 칭호 1쿼리(IN) + 레벨 1쿼리(IN)로 조회한다.

- 칭호 조합 로직을 buildTitleInfoFromList로 분리 (단건 경로는 위임 — 동작 동일)
- loadEquippedTitleMap/loadUserExperienceMap 배치 헬퍼 신설
- 목록 5경로 적용: 종합/미션/스트릭/업적, 레벨, 카테고리, 실시간, 주간·월간
- 내 랭킹류 단건 경로는 기존 유지 (N+1 아님)
- 테스트 스텁 배치 메서드 전환 + 단건 쿼리 금지 verify + 배치 조합 테스트 추가

Claude-Session: https://claude.ai/code/session_01WUxT2FKawxrGLfFM3BnJ6C